# multitouch-xinput

./: LICENSE  Makefile  Makefile.am  README.md  configure.ac  multitouch.c
